// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component should be correctly rendered 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="block text-sm font-medium capitalize text-primary-800"
      for="mock"
    >
      Label
    </label>
    <div
      class="mt-1 rounded-md shadow-sm"
    >
      <textarea
        class="block w-full rounded-md bg-primary-50 pl-6 pr-10 text-base text-primary-900 border-primary-500 focus:border-primary-900 focus:ring-primary-900"
        data-testid="briskly-custom-textarea"
        id="mock"
        rows="5"
      />
    </div>
    <p
      class="mt-1 h-5 overflow-hidden text-ellipsis whitespace-nowrap text-sm capitalize text-error-700"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Component should be correctly rendered when disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    class="w-full opacity-50"
  >
    <label
      class="block text-sm font-medium capitalize text-primary-800"
      for="mock"
    >
      Label
    </label>
    <div
      class="mt-1 rounded-md shadow-sm"
    >
      <textarea
        class="block w-full rounded-md bg-primary-50 pl-6 pr-10 text-base text-primary-900 border-primary-500 focus:border-primary-900 focus:ring-primary-900"
        data-testid="briskly-custom-textarea"
        disabled=""
        id="mock"
        rows="5"
      />
    </div>
    <p
      class="mt-1 h-5 overflow-hidden text-ellipsis whitespace-nowrap text-sm capitalize text-error-700"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Component should be correctly rendered when hasError 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="block text-sm font-medium capitalize text-primary-800"
      for="mock"
    >
      Label
    </label>
    <div
      class="mt-1 rounded-md shadow-sm"
    >
      <textarea
        class="block w-full rounded-md bg-primary-50 pl-6 pr-10 text-base text-primary-900 border-error-700 focus:border-error-700 focus:ring-error-700"
        data-testid="briskly-custom-textarea"
        id="mock"
        rows="5"
      />
    </div>
    <p
      class="mt-1 h-5 overflow-hidden text-ellipsis whitespace-nowrap text-sm capitalize text-error-700"
    >
      Mocked Error
    </p>
  </div>
</DocumentFragment>
`;
